# GraphRAG-Compliance-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_demo.py
config/: __init__.py  settings.py
data/: sample_contract.txt
docs/: ARCHITECTURE.md
notebooks/: exploration.ipynb
src/: __init__.py  exceptions.py  graph_builder.py  models.py  workflow.py
tests/: __init__.py  conftest.py  test_graph_builder.py  test_models.py  test_workflow.py
